# simple-ftp

./: README
ftp_client/: client.h  cmd_analysize.c  ftp.h  ftp_client.cbp  ftp_client.depend  ftp_client.layout  ftp_connect_socket.c  myftp.c  pasv_cmd.c  recv_file.c  server.h
ftp_server/: check_file.c  check_login.c  do_cd.c  do_get.c  do_login.c  do_ls.c  do_mget.c  do_mput.c  do_put.c  do_pwd.c  do_quit.c  do_rm.c  do_rmdir.c  exec_cmd.c  ftp.h  ftp_server.cbp  ftp_server.depend  ftp_server.layout  ftpserver.c  preprocess_path.c  send_file.c  server.h
myftp-0.3/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
myftp-0.3/include/: client.h  file.h  ftp.h  server.h
myftp-0.3/src/: Makefile.am  Makefile.in
myftp-0.3/src/common/: Makefile.am  Makefile.in  check_file.c  display_file.c  trans_file.c
myftp-0.3/src/ftp_client/: Makefile.am  Makefile.in  connect_socket.c  do_get_cli.c  do_login_cli.c  do_mget_cli.c  do_mput_cli.c  do_pasv_cli.c  do_put_cli.c  do_quit_cli.c  exec_cmd_cli.c  myftp.c
myftp-0.3/src/ftp_server/: Makefile.am  Makefile.in  check_login.c  client_thread.c  create_socket.c  do_get.c  do_login.c  do_ls.c  do_mkdir.c  do_pasv.c  do_put.c  do_quit.c  do_server_cmd.c  exec_cmd.c  ftpserver.c  preprocess_path.c  server_thread.c  user_list.c
